# meta-mcp

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: meta-mcp-spec.md
scripts/: gen-icon.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  commands.rs  lib.rs  main.rs  oauth.rs  stdio_bridge.rs
src-tauri/src/config/: mod.rs  types.rs
src-tauri/src/proxy/: aggregator.rs  backend.rs  child.rs  http_client.rs  mod.rs  router.rs  server.rs  sse_client.rs
src/lib/: AddServerModal.svelte  ClaudeConnect.svelte  Icon.svelte  ProfileBar.svelte  ServerList.svelte  ToolList.svelte  api.ts  types.ts
